# LedDemoProject

./: .gitignore  CMakeLists.txt  azure-pipelines.yml  azure-piplines.yml  build.sh  conanfile.py  conanfilelcovgcovreports.py  lcovreport.py
Software_Requirements/: SWF_LED_DemoApp - Software Requirement Specification.xlsx
architecture_design/: zf_swf_aspice_demo.eapx
conanconfig/: cacert.pem  conan.conf
conanconfig/profiles/: swf_linux_to_arm_raspi  swf_ubuntu16_x64_gcc5  swf_ubuntu18_x64_gcc7
conanconfig/profiles/cmake/: swf_raspberrypi_toolchain_armv7-linux-gcc.cmake
cross/: CMakeLists.txt
src/: CMakeLists.txt  led.cc  led.h  main.cc  run_led.cc  run_led.h
test_package/: CMakeLists.txt  conanfile.py  conanfilelcovgcovreports.py  source_test.cc  test_runner.cc
